Integration of points

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<hr>
 			<button @click="onSubmit()">Submit</button>
-			<!-- <h6 v-if="points">{{ points }}/{{ questions.length }} points are correct.</h6> -->
+			<h6>{{ points }}/{{ questions.length }} questions are correct.</h6>
 		</div>
 		<!-- JavaScript Scripts -->
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
